--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,13 @@
     <string name="app_name">Smart lunch</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home">Home</string>
+    <string name="favourite">Favourite</string>
+    <string name="card">Card</string>
+    <string name="cart">Cart</string>
+    <string name="profile">Profile</string>
     <string name="chat">Chat</string>
     <string name="en">English</string>
     <string name="vi">Vietnamese</string>
-    <string name="profile">Profile</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
