--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -93,4 +93,5 @@
     <string name="verify_otp_reset_password_success_message">Mật khẩu mới của bạn đã được cập nhật.</string>
     <string name="reset_pass_title">Đặt lại mật khẩu</string>
     <string name="new_password">Mật khẩu mới</string>
+    <string name="order">Đơn hàng</string>
 </resources>
