--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,7 +137,7 @@ Giỏ hàng
 Xóa
 </string>
     <string name="thanh_to_n_">
-Thanh toán 200.000đ
+Thanh toán
 </string>
     <string name="title_activity_prodoct">ProdoctActivity</string>
 
