--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -12,6 +12,11 @@
     <string name="chat">Trò chuyện</string>
     <string name="en">Tiếng Anh</string>
     <string name="vi">Tiếng Việt</string>
+    <string name="zh">Tiếng Trung</string>
+    <string name="ko">Tiếng Hàn</string>
+    <string name="fr">Tiếng Pháp</string>
+    <string name="th">Tiếng Thái</string>
+
     <string name="title_activity_main">MainActivity</string>
     <string name="first_fragment_label">Fragment Đầu Tiên</string>
     <string name="second_fragment_label">Fragment Thứ Hai</string>
@@ -103,6 +108,17 @@
     <string name="gender_male">Nam</string>
     <string name="http200">http200</string>
     <string name="http400">Loi phia cilent</string>
+    <string name="pay">Thanh toán</string>
+    <string name="category">Category</string>
+    <string name="note_default">Không có ghi chú</string>
+    <string name="min_cost">0 đ</string>
+    <string name="payment_id">no value</string>
+    <string name="payment_fail">fail</string>
+    <string name="error_500">server error</string>
+    <string name="http401">Chua xac thuc</string>
+    <string name="http403">Khong co quyen</string>
+    <string name="http404">not found</string>
+    <string name="http500">Loi server khi su ly</string>
 
     <string name="faild">Lỗi</string>
     <string name="end_call_offer">Cuộc gọi kết thúc, đối phương không trả lời</string>
@@ -131,4 +147,193 @@
     <string name="minimum">Tối thiểu</string>
     <string name="promotion">Khuyến mãi</string>
     <string name="feature_development">Chức năng đang được phát triển</string>
+    <!--    home-->
+    <!-- Tiêu đề hộp thoại cảnh báo -->
+    <string name="confirmation_title">Xác nhận</string>
+    <string name="clear_cart_title">Xóa Giỏ Hàng</string>
+
+    <!-- Nội dung hộp thoại cảnh báo -->
+    <string name="clear_cart_message">Bạn có chắc chắn muốn xóa giỏ hàng của bạn?</string>
+    <string name="delete_product_message">Bạn có muốn xóa sản phẩm này khỏi giỏ hàng không?</string>
+
+    <!-- Nhãn nút trong hộp thoại cảnh báo -->
+    <string name="yes">Có</string>
+    <string name="no">Không</string>
+    <string name="delete">Xóa</string>
+    <string name="cancel">Hủy</string>
+
+    <!-- Tin nhắn Toast -->
+    <string name="get_cart_empty">Không có dữ liệu cho getOneCartById</string>
+    <string name="get_cart_error">Lỗi trong getOneCartById</string>
+
+    <!-- Nhãn khác -->
+    <string name="commit_payment">Thanh Toán</string>
+    <string name="loading"> Đang tải...</string>
+
+    <string name="search_hint"> Bạn đang khao khát điều gì?</string>
+    <string name="popular_text">Phổ biến</string>
+    <string name="see_all_text">Xem tất cả</string>
+    <string name="high_rating_text">Đánh giá cao</string>
+    <string name="recommendation_text">Gợi ý hôm nay</string>
+    <string name="see_detail_text">Xem chi tiết</string>
+    <string name="default_category">Khác</string>
+    <string name="history">Lịch sử</string>
+    <!--    notify-->
+    <string name="order_success">Đặt hàng thành công</string>
+    <string name="notification_time">20/10/2023 | 20:00</string>
+    <string name="notification_content">Bạn đã hủy đơn hàng tại Hut. Chúng tôi xin lỗi vì sự bất tiện của bạn. Chúng tôi sẽ cố gắng cải thiện dịch vụ của mình lần sau 🥲</string>
+    <!--refund-->
+    <string name="payment_status">%1$s</string>
+    <string name="payment_paid">Đã thanh toán</string>
+    <string name="payment_not_paid">Chưa thanh toán</string>
+    <string name="cancel_order_success">Hủy đơn hàng thành công</string>
+    <string name="cancel_order_failed">Hủy đơn hàng thất bại</string>
+    <string name="retry">Thử lại</string>
+    <string name="order_successful">Đặt hàng thành công</string>
+    <string name="cancel_order_successful">Hủy đơn hàng thành công</string>
+    <string name="refund_failed">Refund failed</string>
+    <string name="title_status">Trạng thái đơn hàng</string>
+    <string name="message_status">Thông báo trạng thái</string>
+    <string name="follow_order">Theo dõi </string>
+    <string name="order_process">Quá trình đơn hàng</string>
+    <string name="restaurant_delivery">Nhà hàng giao</string>
+    <string name="restaurant_info">SmartLunch - Trịnh Văn Bô, Nam Từ Liêm</string>
+    <string name="delivery_address">Địa chỉ nhận hàng</string>
+    <string name="recipient">Người nhận:</string>
+    <string name="phone_number_order">Số điện thoại:</string>
+    <string name="address_order">Địa chỉ:</string>
+    <string name="order_info">Thông tin đơn hàng</string>
+    <string name="order_time">Thời gian đặt</string>
+    <string name="update_time">Cập nhật lúc</string>
+    <string name="order_code">Mã đơn hàng</string>
+    <string name="discount_code">Mã giảm giá</string>
+    <string name="total_amount">Tổng tiền</string>
+    <string name="discount">Khuyến mãi</string>
+    <string name="shipping_fee">Phí vận chuyển</string>
+    <string name="final_amount">Thành tiền</string>
+    <string name="payment_method">Hình thức thanh toán</string>
+    <string name="money_method">Tiền mặt</string>
+    <string name="paid">Đã thanh toán</string>
+    <string name="cancel_order">Hủy đơn hàng</string>
+    <string name="rate_order">Đánh giá</string>
+    <string name="rate_order_text">đánh giá</string>
+    <string name="tab_order_0">Chờ xác nhận</string>
+    <string name="tab_order_1">Xác nhận</string>
+    <string name="tab_order_2">Đang giao</string>
+    <string name="tab_order_3">Đã giao hàng</string>
+    <string name="tab_order_4">Đã hủy đơn</string>
+    <string name="product_review_title">Đánh giá sản phẩm</string>
+    <string name="no_order_message">Không có order</string>
+    <string name="comment_success">Đánh giá thành công</string>
+    <string name="comment_failure">Đánh giá thất bại</string>
+    <string name="tracking_order_title">Theo dõi đơn hàng</string>
+    <string name="shipper_not_found">Không tìm thấy người giao hàng</string>
+    <string name="permission_request">Yêu cầu quyền</string>
+    <string name="location_permission_denied">Bạn chưa cho phép quyền sử dụng vị trí</string>
+    <string name="open_settings_permission">Vào cài đặt để cấp quyền</string>
+    <string name="upcoming_arrival">Sắp tới rồi !!</string>
+    <string name="driver_arriving">Tài xế sẽ tới chỗ bạn trong </string>
+    <string name="wait_a_moment">Bạn đợi chút! tôi đang tới chỗ bạn</string>
+    <string name="price_option">Lựa chọn giá</string>
+    <!--    product-->
+    <string name="product_added_to_cart_failure">Thêm vào giỏ hàng thất bại</string>
+    <string name="hide_more">Ẩn bớt</string>
+    <string name="see_more">Xem thêm</string>
+    <string name="toast_product_added_to_cart_failure">Thêm vào giỏ hàng thất bại</string>
+    <string name="no_comments_placeholder">Không có bình luận nào</string>
+    <string name="views">lượt xem</string>
+    <string name="ratings">đánh giá)</string>
+    <string name="sold">Đã bán</string>
+    <string name="size">Size</string>
+    <string name="topping">Topping</string>
+    <string name="comment">Bình luận</string>
+    <string name="add_to_cart">Thêm vào giỏ hàng</string>
+    <string name="buy_now">Mua ngay</string>
+    <string name="list">Danh sách</string>
+    <string name="pass_wrong">Mật khẩu hiện tại không đúng!</string>
+    <string name="current_pass">Mật khẩu cũ</string>
+    <string name="update_profile_success">Cập nhật ảnh đại diện thành công</string>
+    <string name="data_empty">Chưa được cập nhật</string>
+    <string name="search_hint_p">Hãy tìm kiếm</string>
+    <string name="search_results_for">Xem kết quả cho:</string>
+    <string name="ascending_order">Tăng</string>
+    <string name="descending_order">Giảm</string>
+    <string name="sort_by">Sắp xếp</string>
+    <string name="price">Giá</string>
+    <string name="best_seller">Bán chạy</string>
+    <string name="content_order_success">Đơn hàng đã được gửi tới nhà hàng vui lòng chờ trong giây lát</string>
+    <string name="add_address_title">Thêm địa chỉ</string>
+    <string name="select_province">--- Chọn tỉnh / thành phố ---</string>
+    <string name="select_district">--- Chọn quận / huyện ---</string>
+    <string name="select_ward">--- Chọn phường / xã / thị trấn ---</string>
+    <string name="add_address_success">Thêm địa chỉ thành công</string>
+    <string name="add_address_failure">Thêm địa chỉ thất bại</string>
+    <string name="fill_all_information">Vui lòng điền đầy đủ thông tin</string>
+    <string name="select_hanoi_address">Chỉ được chọn địa chỉ quanh khu vực Hà Nội</string>
+    <string name="address_search_error">Lỗi tìm địa chỉ</string>
+    <string name="full_name">Họ và tên</string>
+    <string name="address_detail">Địa chỉ chi tiết</string>
+    <string name="no_id_address">Không có id address</string>
+    <string name="detail_address">Chi tiết địa chỉ</string>
+    <string name="confirm_delete_address">Bạn có muốn xóa địa chỉ này không</string>
+    <string name="no_address">Không có địa chỉ</string>
+    <string name="delete_address_success">Xóa địa chỉ thành công</string>
+    <string name="delete_address_failure">Xóa địa chỉ thất bại</string>
+    <string name="discount_title">Khuyến mãi hiện có</string>
+    <string name="payment_success">Payment Successful</string>
+    <string name="payment_cancel">You\'ve cancelled the payment</string>
+    <string name="payment_failure">Payment Failed</string>
+    <string name="missing_user_info">Missing user information</string>
+    <string name="add_address_prompt">You don\'t have an address yet. Please add one.</string>
+    <string name="create_zalopay_order_fail">Failed to create ZaloPay order</string>
+    <string name="no_address_list">No address list available</string>
+    <string name="no_cart">No cart available</string>
+    <string name="create_zalopay_order_failed">Failed to create ZaloPay order</string>
+    <string name="lack_of_info">Thiếu thông tin người dùng</string>
+    <string name="payment_details">Chi tiết thanh toán</string>
+    <string name="promo_code">Mã khuyến mại</string>
+    <string name="subtotal">Tạm tính</string>
+    <string name="total">Tổng</string>
+    <string name="chose_anddress">Chọn địa chỉ nhận hàng</string>
+    <string name="place_order">Đặt hàng</string>
+    <string name="discount_money">Giảm giá</string>
+    <string name="pay_with">thanh toán bằng </string>
+    <string name="pay_with_zalo_pay">Thanh toán với zalo pay</string>
+    <string name="insufficient_cart">Giỏ hàng không đủ điều kiện để thanh toán</string>
+    <string name="send_data_function">Hàm gửi dữ liệu đến màn hình thanh toán</string>
+    <string name="total_condition_warning">Giỏ hàng không đủ điều kiện để thanh toán</string>
+    <string name="note_hint">Nhập nội dung</string>
+    <string name="add_promo">Thêm khuyến mãi</string>
+    <string name="sub_total">Tạm tính</string>
+    <string name="total_text">Tổng</string>
+    <string name="continue_button">Tiếp tục</string>
+    <string name="account_not_verified">Tài khoản chưa được xác thực</string>
+    <string name="verify">Xác thực</string>
+    <string name="note_tile">Ghi chú đặt hàng</string>
+    <string name="sign_in_with_gg">Sign in with Google</string>
+    <string name="already_registered">Email đã được đăng ký!</string>
+    <string name="system_error">Hệ thống lỗi vui lòng thử lại sau</string>
+    <string name="incorrect_otp">Mã OTP chưa chính xác! Vui lòng kiểm tra lại hộp thư</string>
+    <string name="expired_otp">Mã OTP đã hết hạn! Vui lòng lấy mã mới</string>
+    <string name="system_issue">Hệ thống gặp sự cố. Vui lòng thử lại sau!</string>
+    <string name="payment_money">Thanh toán khi nhận hàng</string>
+    <string name="call">Cuộc gọi thoại</string>
+    <string name="classify">"Phân loại: "</string>
+    <string name="out_date">Hết hạn:</string>
+    <string name="order_id">#252893</string>
+    <string name="order_status">Trạng thái</string>
+    <string name="cancelled_status">đã hủy</string>
+    <string name="product_name">Tên sản phẩm</string>
+    <string name="price_label">Giá tiền</string>
+    <string name="quantity_label">Số lượng</string>
+    <string name="detail_button">Chi tiết</string>
+<!--    cart-->
+    <string name="confirm_delete_title">Xác nhận xóa</string>
+    <string name="confirm_delete_message">Bạn có muốn xóa sản phẩm này khỏi giỏ hàng không?</string>
+    <string name="confirm_delete_positive_button">Xóa</string>
+    <string name="confirm_delete_negative_button">Hủy</string>
+    <string name="cart_insufficient_condition_message">Giỏ hàng không đủ điều kiện để thanh toán</string>
+    <string name="add_to_cart_more">Thêm mặt hàng</string>
+    <string name="insert_your_comment">Nhập phản hồi của bạn...</string>
+    <string name="send_comment">Gửi đánh giá</string>
 </resources>
