--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,7 +61,7 @@
     <string name="display_name">Display name</string>
     <string name="edit_profile">Edit profile</string>
     <string name="my_location">My location</string>
-    <string name="support">Support</string>
+    <string name="introduce">Introduce</string>
     <string name="logout">Logout</string>
     <string name="notify">Notifications</string>
     <string name="dark_mode">Dark mode</string>
@@ -235,4 +235,11 @@ Thanh toán
     <string name="minimum">Tối thiểu</string>
     <string name="promotion">Khuyến mãi</string>
     <string name="feature_development">Chức năng đang được phát triển</string>
+    <string name="filter">Filter</string>
+    <string name="increase">Tăng</string>
+    <string name="decrease">Giảm</string>
+    <string name="about_me">Về chúng tôi</string>
+    <string name="introduct">Trong bối cảnh trên, chúng em quyết định chọn đề tài Ứng dụng đặt đồ ăn Smart Lunch để tìm hiểu sâu hơn về cách áp dụng công nghệ thông tin vào ngành dịch vụ ẩm thực, cung cấp giải pháp thúc đẩy sự tiện lợi cho khách hàng và sự hiệu quả cho quản lý nhà hàng</string>
+    <string name="okok1">Thứ 2 - thứ 6</string>
+    <string name="okok2">Thứ bảy - chủ nhật</string>
 </resources>
