--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -66,7 +66,6 @@
     <string name="display_name">디스플레이 이름</string>
     <string name="edit_profile">프로필 수정</string>
     <string name="my_location">내 위치</string>
-    <string name="support">지원</string>
     <string name="logout">로그아웃</string>
     <string name="notify">알림</string>
     <string name="dark_mode">다크 모드</string>
@@ -347,6 +346,9 @@
     <string name="insert_your_comment">코멘트 입력</string>
     <string name="send_comment">코멘트 보내기</string>
 
-
+    <string name="all_comment">모두</string>
+    <string name="image">이미지 있음</string>
+    <string name="star">별</string>
+    <string name="arrange">정렬</string>
 
 </resources>
