--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -63,7 +63,6 @@
     <string name="display_name">显示名称</string>
     <string name="edit_profile">编辑个人资料</string>
     <string name="my_location">我的位置</string>
-    <string name="support">支持</string>
     <string name="logout">登出</string>
     <string name="notify">通知</string>
     <string name="dark_mode">夜间模式</string>
@@ -347,4 +346,8 @@
     <string name="insert_your_comment">输入您的评论</string>
     <string name="send_comment">发送评论</string>
 
+    <string name="all_comment">全部</string>
+    <string name="image">有图片</string>
+    <string name="star">星级</string>
+    <string name="arrange">排序</string>
 </resources>
